--- a/public/components/login/login.template.html
+++ b/public/components/login/login.template.html
@@ -1,17 +1,13 @@
 <div class="container">
 
-  <form class="form-signin">
+  <form class="form-signin" ng-submit="login(form)">
     <h2 class="form-signin-heading">Please sign in</h2>
     <label for="inputEmail" class="sr-only">Email address</label>
-    <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+    <input type="text" ng-model="form.username" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
     <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-    <div class="checkbox">
-      <label>
-        <input type="checkbox" value="remember-me"> Remember me
-      </label>
-    </div>
+    <input type="password" id="inputPassword" ng-model="form.password" class="form-control" placeholder="Password" required>
     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    <p>Status: <b>{{statusText}}</b></p>
   </form>
 
 </div> <!-- /container -->
